validator_derive_tests/tests/compile-fail/must_not_match/field_doesnt_exist.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(must_not_match(other = password2))]
    password: String,
}

fn main() {}
